<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:id="@+id/tv_fn_hardcoded"
            />

        <TextView
            android:id="@+id/tv_fn_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:visibility="visible"
            tools:text="John" />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:id="@+id/tv_ln_hardcoded"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Cena"
            android:id="@+id/tv_ln_data"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:id="@+id/tv_age_hardcoded"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="21"
            android:id="@+id/tv_age_data"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:id="@+id/tv_sex_hardcoded"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Male"
            android:id="@+id/tv_sex_data"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:id="@+id/tv_weight_hardcoded"
            />
        <RelativeLayout>
            <TextView
                android:id="@+id/tv_weight_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                tools:text="155"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:text="lbs"
                android:layout_toRightOf="@id/tv_weight_data"
                />
        </RelativeLayout>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:id="@+id/tv_height_hardcoded"
            />
        <RelativeLayout>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="6"
                android:id="@+id/tv_height_feet_data"
                />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Feet"
                android:id="@+id/tv_height_feet"
                android:layout_toRightOf="@+id/tv_height_feet_data"
                />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="6"
                android:id="@+id/tv_height_inches_data"
                android:layout_toRightOf="@+id/tv_height_feet"
                />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inches"
                android:id="@+id/tv_height_inches"
                android:layout_toRightOf="@+id/tv_height_inches_data"
                />
        </RelativeLayout>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/tv_location_hardcoded"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="21"
            android:id="@+id/tv_location_data"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_level"
            android:id="@+id/tv_activityLevel_hardcoded"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="21"
            android:id="@+id/tv_activityLevel_data"
            />
    </GridLayout>
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="Back"
        android:textSize="10dp"
        android:layout_margin="0dp" />
</LinearLayout>